# dapper

./: Cargo.toml  README.md
.github/workflows/: ci.yml  dapper-website-deploy.yml
dapper_cli/: Cargo.toml
dapper_cli/src/: child_supervisor.rs  cli.rs  commands.rs  lib.rs  program_name.rs
dapper_config/: Cargo.toml
dapper_config/src/: lib.rs
dapper_control_api/: Cargo.toml
dapper_control_api/src/: control_plane_result.rs  envelope.rs  exception_filter_entry.rs  grpc.rs  lib.rs  navigation_type.rs  output_event.rs  protocol.rs  render.rs  rendered_response.rs  response.rs  response_context.rs  response_context_output.rs
dapper_control_proto/: Cargo.toml  build.rs  control.proto
dapper_control_proto/src/: lib.rs
dapper_control_server/: Cargo.toml
dapper_control_server/src/: lib.rs
dapper_dap_protocol/: Cargo.toml
dapper_dap_protocol/src/: capabilities.rs  data_types.rs  display.rs  enums.rs  events.rs  lib.rs  protocol.rs  requests.rs  responses.rs  tests.rs
dapper_mcp_server/: Cargo.toml
dapper_mcp_server/src/: handler.rs  lib.rs  server.rs  toolsets.rs
dapper_proxy_server/: Cargo.toml
dapper_proxy_server/src/: backend.rs  client.rs  dapper_event.rs  lib.rs  proxy.rs  transport.rs
dapper_session/: Cargo.toml
dapper_session/src/: breakpoint_info.rs  child_session.rs  config.rs  exception_filter_entry.rs  execution_state_summary.rs  lib.rs  (+6 more)
dapper_tracing/: Cargo.toml
scripts/: dapper.sh  dapper_debugpy.sh  dapper_lldb.sh
website/: .gitignore  README.md  config_impl.ts  docusaurus.config.js  helpDocs.ts  package.json  sidebars.ts
(+40 files in other folders)
