[package]
name = "dapper_control_proto"
version = "0.1.0"
authors = ["Meta Platforms, Inc. and affiliates"]
edition = "2024"
license = "MIT"

[dependencies]
prost = { version = "0.14", default-features = false }
tonic = { version = "0.14.5", features = ["tls-ring", "tls-webpki-roots"] }
tonic-prost = "0.14.5"

[build-dependencies]
tonic-prost-build = "0.14.5"
protoc-bin-vendored = "3.0.0"
